--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   media_kit_libs_video: ^1.0.7
   file_picker: ^10.3.3
   fluttertoast: ^9.0.0
+  zoom_pinch_overlay: ^1.4.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
