--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   file_picker: ^10.3.3
   fluttertoast: ^9.0.0
   zoom_pinch_overlay: ^1.4.3
+  infinite_scroll_pagination: ^5.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
