--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: windows-x64-release
-          path: windows-x64-release.zip
+          name: fetch_flow-windows-x64-release
+          path: fetch_flow-windows-x64-release.zip
   create_release:
     name: Create GitHub Release
     needs: [build_windows]
@@ -36,7 +36,5 @@ jobs:
         with:
           generate_release_notes: true
           files: |
-            windows-x64-release/windows-x64-release.zip
-            macos-release/ai_data_management-macOS.zip
-            linux-x64-release/linux-x64-release.zip
+            fetch_flow-windows-x64-release/fetch_flow-windows-x64-release.zip
             
