feat(UI): 实现自定义窗口标题栏以替换原生 Windows 边框
引入了无边框窗口设计，使用 Flutter Widget 完全替换了操作系统默认的窗口标题栏和边框，旨在提升应用的视觉一致性和现代化体验。

**核心变更:**

1.  **集成 `window_manager`:**
    *   在 `main.dart` 中添加了 `window_manager` 的初始化逻辑。
    *   通过设置 `WindowOptions` 中的 `titleBarStyle: TitleBarStyle.hidden`，在应用启动时彻底隐藏了原生的窗口框架。
    *   配置了窗口的初始大小、最小尺寸和居中显示，并通过 `waitUntilReadyToShow` 实现了平滑的启动动画，避免了窗口闪烁和跳动。

2.  **创建 `CustomTitleBar` Widget:**
    *   新建了一个 `CustomTitleBar` Widget，作为应用自定义的顶部栏。
    *   使用 `GestureDetector` 和 `windowManager.startDragging()` 实现了整个标题栏区域的窗口拖动功能。
    *   自定义了最小化、最大化和关闭按钮，并为它们添加了平滑的悬浮动画效果（背景色过渡和图标旋转），以提升交互体验。
    *   集成了应用图标和标题，确保了品牌标识的统一。

3.  **整合到主屏幕:**
    *   在 `MainScreen` 的布局中，使用 `Column` 结构将新的 `CustomTitleBar` 放置在顶部。
    *   原有的 `AppBar` 被保留为一个普通的工具栏，位于自定义标题栏下方，以保留其核心的筛选和搜索功能。
    *   应用的主体内容被 `Expanded` 包裹，以自适应填充剩余空间。

**最终效果:**
此次更新使得应用在桌面端拥有了高度定制化和沉浸式的外观，摆脱了原生窗口的视觉限制，为用户提供了更完整、更具品牌感的用户体验。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   fluttertoast: ^9.0.0
   zoom_pinch_overlay: ^1.4.3
   infinite_scroll_pagination: ^5.1.1
+  window_manager: ^0.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -90,6 +91,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+  - assets/logo/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -121,6 +124,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
 flutter_launcher_icons:
   # 1. 指定源图片路径
   image_path: "assets/logo/logo.png"
