--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   window_manager: ^0.5.1
   async: ^2.13.0
   path: ^1.9.1
+  eva_icons_flutter: ^3.1.0
+  url_launcher: ^6.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
